# flo_automation

./: .env.example  .gitignore  CONTEXT.md  FLOCAREER_AUTOMATION_PLAN.md  README.md  main.py  pyproject.toml
app/: __init__.py  config.py  health.py  questions.py
browser/: __init__.py  action_guard.py  action_router.py  code_editor_workflow.py  flocareer_page.py  join_workflow.py  no_show_workflow.py  playwright_controller.py  question_workflow.py  room_workflow.py  screenshots.py  selectors.py  skill_workflow.py
evaluator/: __init__.py  job_description.py  scoring.py  session_evaluation.py  skill_evaluation.py
llm/: __init__.py  json_repair.py  lmstudio_provider.py  openrouter_provider.py  privacy_redactor.py  prompts.py  provider.py  provider_router.py  schemas.py  usage_tracker.py
orchestrator/: __init__.py  checkpointing.py  effect_executor.py  effect_ledger.py  effects.py  evaluation_executor.py  event_adapters.py  event_identity.py  event_ledger.py  events.py  graph.py  intent_routing.py  intents.py  langgraph_builder.py  live_loop.py  offline_evaluation_runtime.py  question_planning.py  reducers.py  state.py  timer.py  turn_detection.py
tests/: test_action_guard.py  test_apple_speech_adapter.py  test_audio_output.py  test_barge_in.py  test_code_editor_workflow.py  test_config.py  test_dynamic_contracts.py  test_effect_executor.py  test_evaluation_executor.py  test_evaluator.py  test_event_adapters.py  test_flocareer_page.py  test_health.py  test_intent_routing.py  test_interview_controller.py  test_interview_timer.py  test_job_description.py  (+21 more)
(+13 files in other folders)
