[project]
name = "flocareer-interview-copilot"
version = "0.1.0"
description = "Supervised FloCareer interview automation copilot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28,<1",
    "playwright>=1.52,<2",
    "pydantic>=2.10,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "ruff>=0.12,<1",
]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
